[project]
name = "my-doc-layout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "ultralytics>=8.4.23",
]

[[tool.uv.index]]
# https://mirrors.aliyun.com/pytorch-wheels/
url = "https://download.pytorch.org/whl/cu130" 
